--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
   },
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start": "concurrently \"nodemon src/index.js\" \"nodemon src/register-command.js\""
   }
 }
