--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
     "discord.js": "^14.16.1",
     "dotenv": "^16.4.5"
   },
+  "devDependencies": {
+    "concurrently": "^7.6.0",
+    "nodemon": "^2.0.22"
+  },
   "main": "src/index.js",
   "scripts": {
-    "start": "concurrently \"nodemon src/index.js\" \"nodemon src/register-command.js\""
+    "start": "concurrently \"nodemon src/index.js\" \"nodemon src/register-command.js\" \"nodemon src/send-message.js\""
   }
 }
